# backend/internal/api/profile/response.go
@@ -1,0 +1,7 @@
+package profile
+
+type profileResponse struct {
+	Type  string `json:"type"`
+	Logo  string `json:"logo"`
+	About string `json:"about"`
+}
